--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,62 +1,115 @@
-nav {
-  background-color: darkblue;
-  padding: 10px;
+:root {
+  --primary-color: #8EE3EF;
+  --accent1-color: #254E70;
+  --accent2-color: #37718E;
 }
 
-nav a {
-  color: white;
-  display: block;
-  padding: 20px;
-  text-decoration: none;
+body {
+  font-family: 'Playfair Display', serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--primary-color);
 }
 
-h1 {
-  color: darkblue;
-}
-
-img {
-  width: 150px;
-  height: auto;
-  border: 1px solid black;
-  padding: 2px;
-  box-shadow: 0 0 30px gray;
-}
-
-p {
-  padding: 10px;
-}
-
-main {
-  max-width: 840px;
-}
-
-aside {
-  width: 20rem;
-  margin: 1rem;
-  border: 1px solid rgb(0 0 0 / 0.2);
-  padding: 1rem;
-  background-color: #eee;
-  color: #333;
+header {
+  background-color: var(--accent1-color);
+  color: #fff;
+  padding: 1em;
   text-align: center;
 }
 
-aside img {
-  width: 200px;
-  height: auto;
+header img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin: 0 auto;
 }
 
-main img {
-  width: 150px;
-  height: auto;
-}
-
-p {
+header nav ul {
+  list-style: none;
+  margin: 0;
   padding: 0;
 }
 
+header nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+header nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2em;
+}
+
+.hero {
+  position: relative;
+}
+
+.hero img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.hero h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 36px;
+}
+
+article {
+  margin-top: 20px;
+}
+
+article img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  float: right;
+  margin: 10px;
+}
+
+section {
+  margin-top: 20px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gallery img {
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  margin: 10px;
+}
+
 footer {
-  margin-top: 15px;
-  border-top: 1px solid #000;
+  background-color: var(--accent2-color);
+  color: #fff;
+  padding: 1em;
   text-align: center;
   clear: both;
+}
+
+.social-links img {
+  width: 20px;
+  height: 20px;
+  margin: 10px;
+}
+
+.social-links a {
+  text-decoration: none;
 }
