--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,86 +1,57 @@
+:root {
+  --primary-color: #8EE3EF;
+  --accent1-color: #254E70;
+  --accent2-color: #37718E;
+}
+
 body {
-    font-family: 'Playfair Display', serif;
-    margin: 0;
-    padding: 0;
-    background-color: #8EE3EF; /* Primary color */
+  font-family: 'Playfair Display', serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--primary-color);
 }
 
 header {
-    background-color: #254E70; /* Accent1 color */
-    color: #fff;
-    padding: 1em;
-    text-align: center;
-}
-
-header img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin: 0 auto;
+  background-color: var(--accent1-color);
+  color: #fff;
+  padding: 1em;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 header nav ul li {
-    display: inline-block;
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 header nav a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2em;
+.logo {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin: 0 20px;
 }
 
 .hero {
-    position: relative;
+  position: relative;
 }
 
-.hero img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
+.hero-image {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
 }
 
-.hero h1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #fff;
-    font-size: 36px;
-}
-
-article {
-    margin-top: 20px;
-}
-
-article img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-section {
-    margin-top: 20px;
-}
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.gallery img {
-    width: 200px;
-    height:
+.hero-overlay {
