--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -51,7 +51,7 @@ header nav a {
 
 .hero-image {
   width: 100vw;
-  height: 100vh;
+  height: 600px;
   object-fit: cover;
 }
 
@@ -59,56 +59,4 @@ header nav a {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  font-size: 36px;
-  text-align: center;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px;
-}
-
-.welcome-text {
-  position: absolute;
-  top: 70%;
-  right: 20px;
-  color: #fff;
-  font-size: 18px;
-  width: 300px;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px;
-}
-
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  padding: 20px;
-}
-
-.gallery-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-footer {
-  background-color: var(--accent2-color);
-  color: #fff;
-  padding: 1em;
-  text-align: center;
-  clear: both;
-}
-
-.social-links {
-  display: flex;
-  justify-content: space-around;
-  padding: 20px;
-}
-
-.social-links img {
-  width: 20px;
-  height: 20px;
-  margin: 10px;
-}
+  transform: translate(-50%, -
