--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -29,7 +29,6 @@ header nav ul {
 }
 
 header nav ul li {
-  display: inline-block;
   margin-right: 20px;
 }
 
@@ -50,13 +49,6 @@ header nav a {
 }
 
 .hero-image {
-  width: 100vw;
+  width: 100%;
   height: 600px;
-  object-fit: cover;
-}
-
-.hero-overlay {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -
+  object
