--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,47 +1,19 @@
-:root {
-  --primary-color: #8EE3EF;
-  --accent1-color: #254E70;
-  --accent2-color: #37718E;
-}
-
-body {
-  font-family: 'Playfair Display', serif;
-  margin: 0;
-  padding: 0;
-  background-color: var(--primary-color);
-}
-
-header {
-  background-color: var(--accent1-color);
-  color: #fff;
-  padding: 1em;
-  text-align: center;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-header nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-header nav ul li {
-  margin-right: 20px;
-}
-
-header nav a {
-  color: #fff;
-  text-decoration: none;
-}
-
 .logo {
   width: 100px;
   height: 100px;
   object-fit: cover;
-  margin: 0 20px;
+  margin: 0 0 0 20px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+header nav {
+  margin-left: auto;
 }
 
 .hero {
@@ -49,6 +21,55 @@ header nav a {
 }
 
 .hero-image {
+  width: 90vw;
+  height: 400px;
+  object-fit: cover;
+}
+
+.hero-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 600px;
-  object
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-overlay h1 {
+  background: linear-gradient(to right, var(--accent2-color), transparent);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero-image-2 {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.welcome-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.gallery-image {
+  width: 250px;
+  height: 400px;
+  object-fit: cover;
+  margin: 10px;
+}
+
+.gallery-image:nth-child(2) {
+  width: 300px;
+  height: 300px;
+}
