--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -3,17 +3,39 @@
   height: 100px;
   object-fit: cover;
   margin: 0 0 0 20px;
+  float: left;
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: row;
+  background-color: var(--accent1-color);
+  color: #fff;
+  padding: 1em;
+  text-align: center;
+  position: relative;
 }
 
 header nav {
   margin-left: auto;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+header nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+header nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+header nav a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .hero {
@@ -24,6 +46,7 @@ header nav {
   width: 90vw;
   height: 400px;
   object-fit: cover;
+  margin: 0 auto;
 }
 
 .hero-overlay {
@@ -32,16 +55,14 @@ header nav {
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 .hero-overlay h1 {
   background: linear-gradient(to right, var(--accent2-color), transparent);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-top: 100px;
 }
 
 .hero-image-2 {
@@ -67,6 +88,7 @@ header nav {
   height: 400px;
   object-fit: cover;
   margin: 10px;
+  float: left;
 }
 
 .gallery-image:nth-child(2) {
