--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,9 +1,14 @@
-.logo {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  margin: 0 0 0 20px;
-  float: left;
+:root {
+  --primary-color: #8EE3EF;
+  --accent1-color: #254E70;
+  --accent2-color: #37718E;
+}
+
+body {
+  font-family: 'Playfair Display', serif;
+  margin: 0;
+  padding: 0;
+  background-color: var(--primary-color);
 }
 
 header {
@@ -11,21 +16,29 @@ header {
   color: #fff;
   padding: 1em;
   text-align: center;
-  position: relative;
 }
 
 header nav {
-  margin-left: auto;
-  position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
+  display: block;
+  padding: 1em;
+  background-color: var(--accent1-color);
+  color: #fff;
+  text-align: center;
+}
+
+.logo {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin: 0 20px 0 0;
+  float: left;
 }
 
 header nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: inline-block;
 }
 
 header nav ul li {
@@ -43,44 +56,9 @@ header nav a {
 }
 
 .hero-image {
-  width: 90vw;
-  height: 400px;
-  object-fit: cover;
-  margin: 0 auto;
-}
-
-.hero-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  text-align: center;
-}
-
-.hero-overlay h1 {
-  background: linear-gradient(to right, var(--accent2-color), transparent);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-top: 100px;
-}
-
-.hero-image-2 {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  width: 200px;
-  height: 200px;
+  height: 600px;
   object-fit: cover;
-}
-
-.welcome-text {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .gallery-image {
