--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -16,6 +16,7 @@ header {
   color: #fff;
   padding: 1em;
   text-align: center;
+  position: relative;
 }
 
 header nav {
@@ -61,15 +62,78 @@ header nav a {
   object-fit: cover;
 }
 
+.hero-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-overlay h1 {
+  color: #fff;
+  font-size: 48px;
+  margin-bottom: 20px;
+}
+
+.hero-overlay p {
+  color: #fff;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.welcome-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.gallery {
+  display: block;
+  margin-top: 20px;
+}
+
 .gallery-image {
   width: 250px;
   height: 400px;
   object-fit: cover;
   margin: 10px;
-  float: left;
+  display: inline-block;
 }
 
 .gallery-image:nth-child(2) {
   width: 300px;
   height: 300px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--accent1-color);
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+
+.social-links {
+  margin-bottom: 10px;
+}
+
+.social-links a {
+  margin-right: 20px;
+}
+
+.social-links img {
+  width: 20px;
+  height: 20px;
 }
