--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -32,108 +32,11 @@ header nav {
   height: 100px;
   object-fit: cover;
   margin: 0 20px 0 0;
-  float: left;
-}
+  float: left
 
-header nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-}
-
-header nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-header nav a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.hero {
-  position: relative;
-}
-
-.hero-image {
-  width: 100%;
-  height: 600px;
-  object-fit: cover;
-}
-
-.hero-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.hero-overlay h1 {
-  color: #fff;
-  font-size: 48px;
-  margin-bottom: 20px;
-}
-
-.hero-overlay p {
-  color: #fff;
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-
-.welcome-text {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-.gallery {
-  display: block;
-  margin-top: 20px;
-}
-
-.gallery-image {
-  width: 250px;
-  height: 400px;
-  object-fit: cover;
+. gallery -image { 
+   width: 400px;
+   height: 150px;
+   object -fit: cover;
   margin: 10px;
-  display: inline-block;
-}
-
-.gallery-image:nth-child(2) {
-  width: 300px;
-  height: 300px;
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: var(--accent1-color);
-  color: #fff;
-  padding: 10px;
-  text-align: center;
-}
-
-.social-links {
-  margin-bottom: 10px;
-}
-
-.social-links a {
-  margin-right: 20px;
-}
-
-.social-links img {
-  width: 20px;
-  height: 20px;
 }
