--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -15,55 +15,4 @@ header {
   background-color: var(--accent1-color);
   color: #fff;
   padding: 1em;
-  text-align: center;
-  position: relative;
-}
-
-header nav {
-  display: block;
-  padding: 1em;
-  background-color: var(--accent1-color);
-  color: #fff;
-  text-align: center;
-}
-
-.logo {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  margin: 0 20px 0 0;
-  float: left
-
-. gallery -image { 
-   width: 400px;
-   height: 150px;
-   object -fit: cover;
-  margin: 10px;
-}
-
-.hero-image {
-  width: 100%;
-  height: 400px; 
-  object-fit: cover;
-}
-
-.gallery-image {
-  width: 60%; 
-  height: 300px; 
-  object-fit: cover;
-  margin: 10px;
-}
-  
-.hero-overlay {
-  padding: 20px;
-}
-
-.gallery {
-  padding: 20px;
-}
-
-
-img {
-  image-rendering: crisp-edges;
-}
-
+  text-align
