--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -24,7 +24,7 @@ header {
 
 .hero-image {
   width: 100%;
-  height: 100vh; 
+  height: 150vh; 
   object-fit: cover;
 }
 
@@ -45,5 +45,18 @@ header {
 .hero-overlay {
   padding: 20px;
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 
+.gallery-image {
+  width: 350px; 
+  height: 250px; 
 
+  object fit: cover;
+  margin: 20px; 
+  border-radius: 10px; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
+}
