--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -15,48 +15,50 @@ header {
   background-color: var(--accent1-color);
   color: #fff;
   padding: 1em;
-  text-align
+  text-align: center;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-right: 20px;
+}
+
+header nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+header nav ul li {
+  margin-right: 20px;
+}
+
+header nav a {
+  color: #fff;
+  text-decoration: none;
+}
 
 .hero {
   position: relative;
-  height: 100vh; 
+  height: 100vh;
 }
 
 .hero-image {
   width: 100%;
-  height: 150vh; 
+  height: 100vh;
   object-fit: cover;
 }
 
 .hero-overlay {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-}
-
-.hero-overlay {
-  padding: 20px;
-}
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.gallery-image {
-  width: 350px; 
-  height: 250px; 
-
-  object fit: cover;
-  margin: 20px; 
-  border-radius: 10px; 
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
-}
+  left:
