--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,9 +1,8 @@
-/* Define CSS variables */
 :root {
-  --primary-color: #3498db; /* blue */
-  --secondary-color: #f1c40f; /* yellow */
-  --background-color: #f9f9f9; /* light gray */
-  --text-color: #333; /* dark gray */
+  --primary-color: #3498db; 
+  --secondary-color: #f1c40f; 
+  --background-color: #f9f9f9; 
+  --text-color: #333; 
 
   --heading-font: "Monserrat", sans-serif;
   --paragraph-font: "lato", sans-serif;
