--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,6 +20,22 @@ header,main,footer {
   max-width:1250px;
   margine: 0 auto;
 }
+nav {
+  display: flex;
+  justify-content: space-around;
+  padding: 0.8rem;
+  background-color: #242322;
+  margin-top:100px;
+}
+nav a{ 
+  padding: 1.3em;
+  color: #fff;
+  font-family: var(--primary-color);
+}
+nav a:hover{
+  background-colour: nav(--secondery-color);
+  color: #03055B;
+}
 .hero {
   position: relative;
 }
@@ -54,20 +70,8 @@ header,main,footer {
   padding: 1rem;
   font-weight: 590;
 }
-nav {
-  display: flex;
-  justify-content: space-around;
-}
-nav a{ 
-  padding: 1.3em;
-  color: #fff;
-  font-family: var(--primary-color);
-}
-nav a:hover {
-  background-color: #fff;
-  color: nav(--background-color);
-}
 
+}
 footer {
   background-color: var(--primary-color);
   color: var(--secondary-color);
@@ -115,9 +119,7 @@ figcaption{
   justify-self: centre;
   padding 1.3em 0;
 }
-nav a:hover{
-  background-colour: nav(--secondery-color);
-  color: #fff;
+
 }
 footer{
   display:flex;
@@ -132,6 +134,8 @@ footer p{
 footer-menu {
   color: #1A1D23
 }
+
+
 .sociallinks{
   display:flex;
   gap:1.2rem;
