--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,3 @@
-/* Global Styles */
-
 - {
 box-sizing: border-box;
 margin: 0;
@@ -42,24 +40,26 @@ margin-right: 20px;
 /* Hero Styles */
 
 .hero {
-background-image: url('images/image2.png');
+background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/image2.png');
 background-size: cover;
 height: 30vh;
-display: flex;
-justify-content: center;
+display: grid;
+grid-template-columns: 2fr 1fr;
 align-items: center;
 color: #fff;
+padding: 2em;
 }
 
 .hero article {
 display: grid;
-grid-template-columns: 1fr 2fr;
+grid-template-columns: 1fr;
 align-items: center;
 }
 
 .hero img {
 width: 100%;
 height: auto;
+grid-column: 2;
 }
 
 /* History Styles */
@@ -111,4 +111,37 @@ padding: 10px;
 .social-links img {
 width: 30px;
 height: auto;
+}
+
+/* Mobile-specific styles */
+
+@media only screen and (max-width: 768px) {
+/* Hero section */
+.hero {
+flex-direction: column;
+}
+.hero img {
+width: 100%;
+height: auto;
+grid-column: 1;
+}
+
+/* History section */
+.history {
+grid-template-columns: 1fr;
+}
+
+/* Gallery section */
+.gallery {
+grid-template-columns: 1fr;
+}
+
+/* Footer */
+footer {
+flex-direction: column;
+align-items: center;
+}
+.social-links {
+justify-content: center;
+}
 }
