--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,7 @@
+
+
+/* Global Styles */
+
 - {
 box-sizing: border-box;
 margin: 0;
@@ -40,26 +44,26 @@ margin-right: 20px;
 /* Hero Styles */
 
 .hero {
-background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/image2.png');
+background-image: url('images/image2.png');
 background-size: cover;
 height: 30vh;
 display: grid;
-grid-template-columns: 2fr 1fr;
+grid-template-columns: 1fr 1fr;
 align-items: center;
 color: #fff;
 padding: 2em;
+position: relative;
 }
 
 .hero article {
 display: grid;
 grid-template-columns: 1fr;
 align-items: center;
-}
-
-.hero img {
-width: 100%;
-height: auto;
-grid-column: 2;
+background-color: rgba(0, 0, 0, 0.5); /* Blurred color box */
+padding: 1em;
+border-radius: 10px;
+position: relative;
+z-index: 1;
 }
 
 /* History Styles */
@@ -106,6 +110,7 @@ display: grid;
 grid-template-columns: repeat(3, 1fr);
 gap: 20px;
 padding: 10px;
+justify-content: center;
 }
 
 .social-links img {
@@ -116,27 +121,22 @@ height: auto;
 /* Mobile-specific styles */
 
 @media only screen and (max-width: 768px) {
-/* Hero section */
+/* Hero section _/
 .hero {
 flex-direction: column;
 }
-.hero img {
-width: 100%;
-height: auto;
-grid-column: 1;
+.hero article {
+background-color: rgba(0, 0, 0, 0.5); /_ Blurred color box _/
 }
-
-/* History section */
+/_ History section _/
 .history {
 grid-template-columns: 1fr;
 }
-
-/* Gallery section */
+/_ Gallery section _/
 .gallery {
 grid-template-columns: 1fr;
 }
-
-/* Footer */
+/_ Footer */
 footer {
 flex-direction: column;
 align-items: center;
