--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,7 +1,3 @@
-
-
-/* Global Styles */
-
 - {
 box-sizing: border-box;
 margin: 0;
@@ -64,15 +60,23 @@ padding: 1em;
 border-radius: 10px;
 position: relative;
 z-index: 1;
+grid-column: 1;
+}
+
+.hero img {
+width: 100%;
+height: auto;
+grid-column: 2;
 }
 
 /* History Styles */
 
 .history {
 display: grid;
-grid-template-columns: 2fr 1fr 2fr;
+grid-template-columns: repeat(3, 1fr);
 align-items: center;
 padding: 2em;
+gap: 20px;
 }
 
 .history img {
@@ -97,20 +101,19 @@ height: auto;
 /* Footer Styles */
 
 footer {
-background-color: #03055B; /* Dark Blue */
+background-color: #03055B; /* Dark Blue _/
 color: #fff;
 padding: 1em;
 display: flex;
 flex-direction: column;
-align-items: center;
+align-items: flex-end; /_ Align icons to the right */
 }
 
 .social-links {
-display: grid;
-grid-template-columns: repeat(3, 1fr);
+display: flex;
+flex-direction: row;
 gap: 20px;
 padding: 10px;
-justify-content: center;
 }
 
 .social-links img {
@@ -130,11 +133,11 @@ background-color: rgba(0, 0, 0, 0.5); /_ Blurred color box _/
 }
 /_ History section _/
 .history {
-grid-template-columns: 1fr;
+grid-template-columns: repeat(2, 1fr);
 }
 /_ Gallery section _/
 .gallery {
-grid-template-columns: 1fr;
+grid-template-columns: repeat(2, 1fr);
 }
 /_ Footer */
 footer {
@@ -142,6 +145,7 @@ flex-direction: column;
 align-items: center;
 }
 .social-links {
+flex-direction: row;
 justify-content: center;
 }
 }
