--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,73 +1,39 @@
-.grid-container {
-display: grid;
-grid-template-columns: repeat(12, 1fr);
-gap: 10px;
-}
 
 header {
-grid-column: 1 / 13;
-background-color: #03055B;
-color: #fff;
-padding: 20px;
-text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  background-color: #03055B;
+  color: #fff;
+  padding: 20px;
+  align-items: center;
+}
+
+header img {
+  grid-column: 1;
+  width: 100px;
+  height: auto;
+  margin-left: 20px;
+}
+
+nav {
+  grid-column: 2;
+  display: flex;
+  justify-content: flex-end;
 }
 
 nav ul {
-list-style: none;
-margin: 0;
-padding: 0;
-display: flex;
-justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 nav li {
-margin-right: 20px;
+  margin-right: 20px;
 }
 
 nav a {
-color: #fff;
-text-decoration: none;
-}
-
-.grid-item--1 {
-grid-column: 1 / 13;
-padding: 20px;
-}
-
-.grid-item--2 {
-grid-column: 1 / 6;
-padding: 20px;
-}
-
-.grid-item--3 {
-grid-column: 6 / 13;
-padding: 20px;
-}
-
-.grid-item--4 {
-grid-column: 1 / 13;
-padding: 20px;
-}
-
-form {
-display: grid;
-grid-template-columns: repeat(2, 1fr);
-gap: 10px;
-}
-
-label {
-grid-column: 1 / 2;
-}
-
-input, textarea {
-grid-column: 2 / 3;
-}
-
-footer {
-grid-column: 1 / 13;
-background-color: #333;
-color: #fff;
-padding: 10px;
-text-align: center;
+  color: #fff;
+  text-decoration: none;
 }
 
