--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,4 +1,4 @@
-
+8
 header {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -36,14 +36,10 @@ nav a {
   color: #fff;
   text-decoration: none;
 }
-Based on your wireframe, I'll help you create the second phase with a background image.
-
-Here's the updated HTML and CSS code:
-
 
 .hero-section {
   grid-column: 1 / 13;
-  background-image: url('images/hero.jpg');
+  background-image: url('images/hero.png');
   background-size: cover;
   background-position: center;
   height: 500px;
