--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,3 +1,9 @@
+grid-container {
+display: grid;
+grid-template-columns: repeat(12, 1fr);
+gap: 10px;
+}
+
 header {
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -57,4 +63,74 @@ nav a {
 }
 
 
+.
+
+.grid-item--1 {
+grid-column: 1 / 13;
+padding: 20px;
+}
+
+.grid-item--2 {
+grid-column: 1 / 6;
+padding: 20px;
+}
+
+.grid-item--3 {
+grid-column: 6 / 13;
+padding: 20px;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+}
+
+.employee-card {
+margin: 20px;
+width: calc(33.33% - 20px);
+}
+
+.employee-card img {
+width: 100%;
+height: 150px;
+object-fit: cover;
+border-radius: 50%;
+}
+
+.employee-card p {
+text-align: center;
+}
+
+.grid-item--4 {
+grid-column: 1 / 13;
+padding: 20px;
+}
+
+footer {
+grid-column: 1 / 13;
+background-color: #333;
+color: #fff;
+padding: 20px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+.social-links {
+display: flex;
+justify-content: space-between;
+width: 100px;
+}
+
+.social-links img {
+width: 20px;
+height: 20px;
+margin-right: 10px;
+}
+
+.copyright {
+margin-left: 20px;
+}
+
+.wireframe-link {
+margin: 0 auto;
+}
 
