--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -105,19 +105,18 @@ padding: 20px;
 }
 
 footer {
-grid-column: 1 / 13;
-background-color: #333;
-color: #fff;
-padding: 20px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-}
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  background-color: #03055B;
+  color: #fff;
+  padding: 20px;
+  align-items: center;
 
 .social-links {
 display: flex;
 justify-content: space-between;
 width: 100px;
+
 }
 
 .social-links img {
