--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -63,27 +63,18 @@ nav a {
 }
 
 
-.grid-item--1 {
+.grid-item--3 {
 grid-column: 1 / 13;
 padding: 20px;
-}
-
-.grid-item--2 {
-grid-column: 1 / 6;
-padding: 20px;
-}
-
-.grid-item--3 {
-grid-column: 6 / 13;
-padding: 20px;
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
+display: grid;
+grid-template-columns: 1fr 3fr;
+gap: 20px;
 }
 
 .employee-card {
-margin: 20px;
-width: calc(33.33% - 20px);
+display: flex;
+flex-direction: row;
+align-items: center;
 }
 
 .employee-card img {
@@ -93,14 +84,17 @@ object-fit: cover;
 border-radius: 50%;
 }
 
-.employee-card p {
-text-align: center;
+.employee-description {
+background-color: #FFC5C5; 
+padding: 20px;
+border-radius: 10px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+
+.employee-description p {
+text-align: left;
+color: #333;
 }
 
-.grid-item--4 {
-grid-column: 1 / 13;
-padding: 20px;
-}
 footer {
 display: grid;
 grid-template-columns: 1fr 1fr 1fr;
@@ -109,7 +103,6 @@ color: #fff;
 padding: 20px;
 align-items: center;
 }
-
 .social-links {
 grid-column: 1;
 display: flex;
