--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 0.6fr 1.1fr 2.3fr 0.3fr;
   grid-auto-columns: 1fr;
-  gap: 0px 0px;
+  gap: 1px 1px;
   grid-auto-flow: row;
   grid-template-areas: "Header Header" "Hero image Hero image" "Main Main" "Footer Footer";
   background-color: #f2f2f2;
@@ -14,7 +14,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   grid-auto-columns: 1fr;
-  gap: 0px 0px;
+  gap: 1px 1px;
   grid-auto-flow: row;
   grid-template-areas: "Logo Nav Nav Nav";
   grid-area: Header;
@@ -52,7 +52,7 @@
 }
 
 .hero-image {
-  grid-area: Hero image;
+  grid-area: "Hero Image";
   background-image: url('images/hero.jpg');
   background-size: cover;
   background-position: center;
@@ -101,6 +101,10 @@
 
 .employee-description h2 {
   margin-top: 0;
+}
+
+.iframe {
+  border: 1;
 }
 
 .footer {
